# platoanalyze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: .#LinearStressExpression.hpp  AbstractGlobalVectorFunctionInc.hpp  AbstractLinearStress.cpp  AbstractLinearStress.hpp  AbstractLocalMeasure.hpp  AbstractLocalScalarFunctionInc.hpp  AbstractLocalVectorFunctionInc.hpp  AbstractProblem.hpp  AbstractScalarFunction.hpp  AbstractScalarFunctionInc.hpp  AbstractVectorFunction.hpp  AbstractVectorFunctionInc.hpp  AbstractVectorFunctionVMS.hpp  AbstractYieldStress.hpp  AdjointComplexRayleighDamping.hpp  AdjointStructuralDynamicsResidual.hpp  AlgebraicRocketMain.cpp  AnalyzeAppUtils.cpp  AnalyzeAppUtils.hpp  AnalyzeMacros.hpp  AnalyzeOutput.hpp  Analyze_App.cpp  Analyze_App.hpp  Analyze_MPMD.cpp  ApplyConstraints.hpp  ApplyPenalty.hpp  ApplyProjection.hpp  ApplyWeighting.hpp  Assembly.hpp  BLAS1.hpp  BLAS2.hpp  BLAS3.hpp  BasicLocalScalarFunction.cpp  BasicLocalScalarFunction.hpp  BasicLocalScalarFunctionInc.cpp  BasicLocalScalarFunctionInc.hpp  BodyLoads.hpp  CMakeLists.txt  CellForcing.hpp  ComplexElasticEnergy.hpp  (+300 more)
src/alg/: AmgXConfigs.cpp  AmgXConfigs.hpp  AmgXLinearSolver.cpp  AmgXLinearSolver.hpp  AmgXSparseLinearProblem.hpp  Analyze.cpp  Basis.hpp  CrsLinearProblem.hpp  CrsMatrix.hpp  Cubature.hpp  EpetraLinearSolver.cpp  EpetraLinearSolver.hpp  ErrorHandling.hpp  LGR.cpp  ParallelComm.cpp  ParallelComm.hpp  ParseInput.cpp  ParseInput.hpp  PlatoAbstractSolver.hpp  PlatoLambda.hpp  PlatoSolverFactory.cpp  PlatoSolverFactory.hpp  Plato_Types.hpp  Run.cpp  Run.hpp  TpetraLinearSolver.cpp  TpetraLinearSolver.hpp
src/elliptic/: AbstractScalarFunction.hpp  AbstractVectorFunction.hpp  DivisionFunction.cpp  DivisionFunction.hpp  EMStressPNorm.cpp  EMStressPNorm.hpp  EffectiveEnergy.cpp  EffectiveEnergy.hpp  ElastostaticResidual.cpp  ElastostaticResidual.hpp  ElectroelastostaticResidual.hpp  EllipticSimplexFadTypes.hpp  FluxPNorm.cpp  FluxPNorm.hpp  InternalElasticEnergy.cpp  InternalElasticEnergy.hpp  InternalElectroelasticEnergy.cpp  InternalElectroelasticEnergy.hpp  InternalThermalEnergy.cpp  InternalThermalEnergy.hpp  InternalThermoelasticEnergy.cpp  InternalThermoelasticEnergy.hpp  LeastSquaresFunction.cpp  LeastSquaresFunction.hpp  MassMoment.cpp  MassMoment.hpp  MassPropertiesFunction.cpp  MassPropertiesFunction.hpp  PhysicsScalarFunction.cpp  PhysicsScalarFunction.hpp  Problem.cpp  Problem.hpp  ScalarFunctionBase.hpp  ScalarFunctionBaseFactory.cpp  ScalarFunctionBaseFactory.hpp  ScalarFunctionBaseFactory_def.hpp  SolutionFunction.cpp  SolutionFunction.hpp  StressPNorm.cpp  StressPNorm.hpp  (+16 more)
src/geometric/: AbstractScalarFunction.hpp  DivisionFunction.cpp  DivisionFunction.hpp  GeometricSimplexFadTypes.hpp  GeometryMisfit.hpp  GeometryScalarFunction.cpp  GeometryScalarFunction.hpp  LeastSquaresFunction.cpp  LeastSquaresFunction.hpp  MassMoment.cpp  MassMoment.hpp  MassPropertiesFunction.cpp  MassPropertiesFunction.hpp  ScalarFunctionBase.hpp  ScalarFunctionBaseFactory.cpp  ScalarFunctionBaseFactory.hpp  ScalarFunctionBaseFactory_def.hpp  Volume.hpp  WeightedSumFunction.cpp  WeightedSumFunction.hpp  WorksetBase.hpp
src/helmholtz/: AbstractVectorFunction.hpp  AddMassTerm.hpp  Helmholtz.hpp  HelmholtzFlux.hpp  HelmholtzResidual.cpp  HelmholtzResidual.hpp  HelmholtzSimplexFadTypes.hpp  Problem.cpp  Problem.hpp  SimplexHelmholtz.hpp  VectorFunction.hpp
src/hyperbolic/: AbstractHyperbolicLinearStress.cpp  AbstractHyperbolicLinearStress.hpp  AbstractProblem.hpp  AbstractScalarFunction.cpp  AbstractScalarFunction.hpp  AbstractVectorFunction.cpp  AbstractVectorFunction.hpp  AbstractVectorFunctionHyperbolic.hpp  AverageSurfacePressure.cpp  AverageSurfacePressure.hpp  AverageSurfaceTemperature.cpp  AverageSurfaceTemperature.hpp  BrinkmanForces.cpp  BrinkmanForces.hpp  ComputationalFluidDynamicsTest.cpp  CriterionBase.hpp  CriterionFlowRate.cpp  CriterionFlowRate.hpp  CriterionThermalCompliance.cpp  CriterionThermalCompliance.hpp  ElastomechanicsResidual.hpp  EnergyConservationUtils.hpp  FluidsCriterionFactory.cpp  FluidsCriterionFactory.hpp  FluidsCriterionFactory_def.hpp  FluidsFunctionFactory.hpp  FluidsLeastSquaresScalarFunction.cpp  FluidsLeastSquaresScalarFunction.hpp  FluidsQuasiImplicit.cpp  FluidsQuasiImplicit.hpp  FluidsScalarFunction.cpp  FluidsScalarFunction.hpp  FluidsStabilizedUniformThermalSource.cpp  FluidsStabilizedUniformThermalSource.hpp  FluidsThermalSourceFactory.hpp  FluidsThermalSources.cpp  FluidsThermalSources.hpp  FluidsUniformThermalSource.cpp  FluidsUniformThermalSource.hpp  FluidsUtils.hpp  (+52 more)
src/parabolic/: AbstractScalarFunction.hpp  AbstractVectorFunction.hpp  ExpInstMacros.hpp  HeatEquationResidual.cpp  HeatEquationResidual.hpp  InternalThermalEnergy.cpp  InternalThermalEnergy.hpp  InternalThermoelasticEnergy.cpp  InternalThermoelasticEnergy.hpp  ParabolicSimplexFadTypes.hpp  PhysicsScalarFunction.cpp  PhysicsScalarFunction.hpp  Problem.cpp  Problem.hpp  ScalarFunctionBase.hpp  ScalarFunctionBaseFactory.cpp  (+9 more)
tests/: CMakeLists.txt  timer.cmake
unit_tests/: AlgebraicRocketTest.cpp  AmgXTests.cpp  AnalyzeAppIntxTests.cpp  AnalyzeAppIntxTests.hpp  AnalyzeAppTests.cpp  AnalyzeTestHelpers.cpp  AnalyzeTestHelpers.hpp  CMakeLists.txt  ComputationalFluidDynamicsTests.cpp  CrsMatrixTests.cpp  DerivativeTests.cpp  ElastoPlasticityTest.cpp  ElastoPlasticityTests.cpp  ElastodynamicsTest.cpp  ElectroelasticTests.cpp  EllipticUpdLagTests.cpp  GeometryMisfitTests.cpp  HamiltonJacobiTest.cpp  HeatEquationTests.cpp  LinearMaterialModelTests.cpp  MassPropertiesTests.cpp  OmegaHUtilitiesTests.cpp  PlasticityTests.cpp  PlatoAugLagStressTest.cpp  PlatoFunctorsTest.cpp  PlatoHelmholtzFilterTests.cpp  PlatoMaterialModelTest.cpp  PlatoMathHelpersTest.cpp  PlatoMeshMapTests.cpp  PlatoMultipointConstraintTests.cpp  PlatoSolverInterfaceTests.cpp  PlatoSpatialModelTests.cpp  PlatoTestHelpers.cpp  PlatoTestHelpers.hpp  PlatoUnitTestMain.cpp  StabilizedMechanicsTests.cpp  StructuralDynamicsTest.cpp  ThermoelasticTests.cpp  ThermoplasticityTests.cpp  TransientDynamicsTests.cpp  (+5 more)
(+132 files in other folders)
