if(    EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/regression/CMakeLists.txt
   AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/verification/CMakeLists.txt)
  ADD_SUBDIRECTORY(regression)
  message("-- Added plato regression tests")

  FIND_PROGRAM( PARAVIEW NAMES paraview )
  IF(PARAVIEW)
    FIND_PROGRAM( DOXYGEN NAMES doxygen )
    ADD_SUBDIRECTORY(verification)
    message("-- Added plato verification tests")
  else()
    message("-- Paraview was not found but is required for post-processing.  Verification tests not added.")
  endif()
else()
  message("-- Plato tests not added. skipping.")
  message("--   To include plato tests:")
  message("--    git submodule init")
  message("--    git submodule update")
  message("--   Then rerun cmake.")
endif()
